// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should render 1`] = `
<ul class="pagination pagination-root">
  <li class="page-item disabled">
    <button class="page-link">
      <svg class="icon-root lexicon-icon lexicon-icon-angle-left">
        <use xlink:href="/images/lexicon/icons.svg#angle-left"></use>
      </svg>
    </button>
  </li>
  <li class="page-item active">
    <button class="page-link">1</button>
  </li>
  <li class="page-item disabled">
    <button class="page-link">
      <svg class="icon-root lexicon-icon lexicon-icon-angle-right">
        <use xlink:href="/images/lexicon/icons.svg#angle-right"></use>
      </svg>
    </button>
  </li>
</ul>
`;

exports[`Pagination should render a lot of pages with a middle page active 1`] = `
<ul class="pagination pagination-root">
  <li class="page-item">
    <button class="page-link">
      <svg class="icon-root lexicon-icon lexicon-icon-angle-left">
        <use xlink:href="/images/lexicon/icons.svg#angle-left"></use>
      </svg>
    </button>
  </li>
  <li class="page-item">
    <button class="page-link">1</button>
  </li>
  <li class="page-item">
    <div class="dropdown dropdown-root" id="overlay2">
      <button class="button-root btn btn-link dropdown-toggle page-link" type="button">
        <span class="text-truncate">... </span>
      </button>
    </div>
  </li>
  <li class="page-item">
    <button class="page-link">48</button>
  </li>
  <li class="page-item">
    <button class="page-link">49</button>
  </li>
  <li class="page-item active">
    <button class="page-link">50</button>
  </li>
  <li class="page-item">
    <button class="page-link">51</button>
  </li>
  <li class="page-item">
    <button class="page-link">52</button>
  </li>
  <li class="page-item">
    <div class="dropdown dropdown-root" id="overlay3">
      <button class="button-root btn btn-link dropdown-toggle page-link" type="button">
        <span class="text-truncate">... </span>
      </button>
    </div>
  </li>
  <li class="page-item">
    <button class="page-link">100</button>
  </li>
  <li class="page-item">
    <button class="page-link">
      <svg class="icon-root lexicon-icon lexicon-icon-angle-right">
        <use xlink:href="/images/lexicon/icons.svg#angle-right"></use>
      </svg>
    </button>
  </li>
</ul>
`;

exports[`Pagination should render a lot of pages with the end page active 1`] = `
<ul class="pagination pagination-root">
  <li class="page-item">
    <button class="page-link">
      <svg class="icon-root lexicon-icon lexicon-icon-angle-left">
        <use xlink:href="/images/lexicon/icons.svg#angle-left"></use>
      </svg>
    </button>
  </li>
  <li class="page-item">
    <button class="page-link">1</button>
  </li>
  <li class="page-item">
    <div class="dropdown dropdown-root" id="overlay4">
      <button class="button-root btn btn-link dropdown-toggle page-link" type="button">
        <span class="text-truncate">... </span>
      </button>
    </div>
  </li>
  <li class="page-item">
    <button class="page-link">98</button>
  </li>
  <li class="page-item">
    <button class="page-link">99</button>
  </li>
  <li class="page-item active">
    <button class="page-link">100</button>
  </li>
  <li class="page-item disabled">
    <button class="page-link">
      <svg class="icon-root lexicon-icon lexicon-icon-angle-right">
        <use xlink:href="/images/lexicon/icons.svg#angle-right"></use>
      </svg>
    </button>
  </li>
</ul>
`;

exports[`Pagination should render with a lot of pages 1`] = `
<ul class="pagination pagination-root">
  <li class="page-item disabled">
    <button class="page-link">
      <svg class="icon-root lexicon-icon lexicon-icon-angle-left">
        <use xlink:href="/images/lexicon/icons.svg#angle-left"></use>
      </svg>
    </button>
  </li>
  <li class="page-item active">
    <button class="page-link">1</button>
  </li>
  <li class="page-item">
    <button class="page-link">2</button>
  </li>
  <li class="page-item">
    <button class="page-link">3</button>
  </li>
  <li class="page-item">
    <div class="dropdown dropdown-root" id="overlay1">
      <button class="button-root btn btn-link dropdown-toggle page-link" type="button">
        <span class="text-truncate">... </span>
      </button>
    </div>
  </li>
  <li class="page-item">
    <button class="page-link">100</button>
  </li>
  <li class="page-item">
    <button class="page-link">
      <svg class="icon-root lexicon-icon lexicon-icon-angle-right">
        <use xlink:href="/images/lexicon/icons.svg#angle-right"></use>
      </svg>
    </button>
  </li>
</ul>
`;

exports[`Pagination should render with buttons if passed an onChange handler 1`] = `
<ul class="pagination pagination-root">
  <li class="page-item disabled">
    <button class="page-link">
      <svg class="icon-root lexicon-icon lexicon-icon-angle-left">
        <use xlink:href="/images/lexicon/icons.svg#angle-left"></use>
      </svg>
    </button>
  </li>
  <li class="page-item active">
    <button class="page-link">1</button>
  </li>
  <li class="page-item disabled">
    <button class="page-link">
      <svg class="icon-root lexicon-icon lexicon-icon-angle-right">
        <use xlink:href="/images/lexicon/icons.svg#angle-right"></use>
      </svg>
    </button>
  </li>
</ul>
`;
